welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: recursive variable compteurBaggle needs type
    		compteurBaggle = compteurBaggle+1
                ^Poucet:10: error: value >= is not a member of Unit
    if (compteurBaggle >= 3)
                       ^